--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,9 @@ body {
     rgb(3, 22, 65) 75.3%
   );
 }
-.heading-container {
+.weather-container {
   margin: 20px auto;
-  max-width: 800px;
+  max-width: 600px;
   background: rgba(165, 191, 255, 0.5);
   padding: 20px;
   border-radius: 10px;
