--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,5 @@
 body {
-  background: radial-gradient(
-    circle at 74.2% 50.9%,
-    rgb(14, 72, 222) 5.2%,
-    rgb(3, 22, 65) 75.3%
-  );
+  background: linear-gradient(to top, #00c6fb 0%, #005bea 100%);
 }
 .weather-container {
   margin: 20px auto;
