--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,43 @@
 body {
   background: linear-gradient(to top, #00c6fb 0%, #005bea 100%);
 }
+
+h1 {
+  color: white;
+  text-align: center;
+  height: 70px;
+  font-size: 50px;
+  letter-spacing: 0.5px;
+}
+
+h2 {
+  color: white;
+  text-align: center;
+  padding-top: 20px;
+}
+
+li {
+  color: white;
+  font-size: 16px;
+  line-height: 19px;
+  padding: 9px;
+  list-style: none;
+  text-align: left;
+}
+
+img {
+  display: block;
+  margin: 0 auto;
+}
+
+small {
+  color: White;
+}
+.container {
+  margin: 20px auto;
+  max-width: 600px;
+  margin-bottom: 40px;
+}
 .weather-container {
   margin: 20px auto;
   max-width: 600px;
@@ -9,11 +46,6 @@ body {
   border-radius: 10px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-h1 {
-  color: white;
-  text-align: center;
-}
-
 .city-button {
   border: none;
   background: none;
@@ -21,39 +53,38 @@ h1 {
   margin-top: 10px;
   margin-left: 2px;
 }
-h2 {
-  color: white;
-  text-align: center;
-  padding-top: 20px;
-}
 .DDT {
   text-align: center;
   color: white;
+  font-size: 18px;
+  font-weight: 300;
+  height: 55px;
+}
+.units {
+  color: white;
+}
+.weather-info {
+  font-weight: 200px;
 }
 
+.icons {
+  text-align: center;
+  font-size: 50px;
+}
+
+.weather-info #sun {
+  height: 64px;
+  width: 64px;
+  text-align: center;
+}
 .container-today {
   text-align: center;
   margin: 20px auto;
 }
-.sun {
-  font-size: 150px;
+.container-tomorrow {
+  margin-top: 30px;
   text-align: center;
-}
-ul {
-  padding-top: 55px;
-}
-li {
-  color: white;
-  font-size: large;
-  margin-top: 8px;
-  list-style: none;
-  text-align: left;
-}
-#celcius-link {
-  color: White;
-}
-#fahrenheit-link {
-  color: white;
+  font-size: 30px;
 }
 .container-hourly {
   margin: 20px auto;
@@ -64,26 +95,19 @@ li {
   font-size: 19px;
   text-align: left;
 }
-img {
-  display: block;
-  margin: 0 auto;
-}
 
-.container-tomorrow {
-  margin-top: 30px;
-  text-align: center;
-  font-size: 30px;
+#search-form {
+  margin-top: 10px;
 }
-.icons {
-  text-align: center;
-  font-size: 50px;
+#current-temp {
+  padding-left: 10px;
+  font-size: 64px;
+  line-height: 1;
+  font-weight: 400;
 }
-.Temp {
-  display: block;
-  margin: 0 auto;
-  text-align: center;
-  font-size: 18px;
-}
-small {
+#celcius-link {
   color: White;
+}
+#fahrenheit-link {
+  color: white;
 }
