--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ small {
 }
 .DDT {
   text-align: center;
-  color: white;
+  color: rgb(45, 45, 44);
   font-size: 18px;
   height: 55px;
   font-weight: 200px;
